--- a/src/app/Paginas/Header/nav-encode/nav-encode.component.html
+++ b/src/app/Paginas/Header/nav-encode/nav-encode.component.html
@@ -82,6 +82,11 @@
                 <fa-icon [icon]="util.faCog"></fa-icon>
               </span>
               Perfil</a>
+            <!--a class="dropdown-item padding-left-p" (click)="insertCurrencies()" >
+              <span class="margin-rigth-p">
+                <fa-icon [icon]="util.faCog"></fa-icon>
+              </span>
+              Currency</a-->
             <a class="dropdown-item padding-left-p" data-toggle="modal" data-target="#modalConfirmLogout">
               <span class="margin-rigth-p">
                 <fa-icon [icon]="util.faTimesCircle"></fa-icon>
