--- a/src/app/Paginas/Body/usuarios/permisos/permisos.component.html
+++ b/src/app/Paginas/Body/usuarios/permisos/permisos.component.html
@@ -183,7 +183,7 @@
               <fa-icon [icon]="util.faPen"></fa-icon>
             </span>
         </button>
-        <button [disabled]="permiso.id.toString() == util.PERMISO_INSERT || permiso.id.toString() == util.PERMISO_UPDATE || permiso.id.toString() == util.PERMISO_DELETE || permiso.id.toString() == util.PERMISO_EXPORT || permiso.id.toString() == util.PERMISO_MNTBACKUPS || permiso.id.toString() == util.PERMISO_MNTINCONSISTENCIA" type="button" class="btn btn-danger btn-delete" (click)="actionPermiso(util.OPERACION_ELIMINAR, permiso, i)" data-toggle="modal" data-target="#modalPermiso">
+        <button [disabled]="permiso.id <= 6" type="button" class="btn btn-danger btn-delete" (click)="actionPermiso(util.OPERACION_ELIMINAR, permiso, i)" data-toggle="modal" data-target="#modalPermiso">
             <span>
               <fa-icon [icon]="util.faTrash"></fa-icon>
             </span>
@@ -195,7 +195,7 @@
   </table>
 </div>
 
-<button type="button" class="btn btn-outline-success rounded-circle addButton" (click)="actionPermiso(util.OPERACION_AGREGAR)" data-toggle="modal" data-target="#modalPermiso">
+<button [disabled]="!usuarioService.isValidTipoUser(util.SUPERADMIN)" type="button" class="btn btn-outline-success rounded-circle addButton" (click)="actionPermiso(util.OPERACION_AGREGAR)" data-toggle="modal" data-target="#modalPermiso">
   <span>
     <fa-icon [icon]="util.faPlus" ></fa-icon>
   </span>
