--- a/src/styles.css
+++ b/src/styles.css
@@ -468,6 +468,9 @@ app-gastos-entradas {
 .btn-delete-MNT {
   width: 90px; font-size: 16px;
 }
+.btn-Mnt-Inconsistencia {
+  width: 90px; font-size: 18px;
+}
 .icon-Calendar-full {
   padding: 0px !important; margin-left: -10px !important; font-size: 25px !important;
 }
